# src/auth/auth.route.js
@@ -1,12 +1,6 @@
-const router = require("express").Router();
-const authContoller = require("./auth.controller");
+const router = require('express').Router();
+const authContoller = require('./auth.controller');
 
-
-
-
-router.post("/login",  authContoller.loginController);
+router.post('/login', authContoller.loginController);
 
 module.exports = router;
-
-
-
